# CPPWebFramework

./: .appveyor.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  cppwebserver.cpp  environment.Dockerfile
CPPWebFramework/: CMakeLists.txt  CPPWebFramework.pro  UnitTests.pro  main.cpp
CPPWebFramework/cwf/: configuration.cpp  configuration.h  constants.h  controller.cpp  controller.h  cppwebapplication.cpp  cppwebapplication.h  cppwebcontroller.cpp  cppwebcontroller.h  cppwebframework_global.h  cppwebframework_global.h.2  cppwebserver.cpp  cppwebserver.h  cppwebservlet.cpp  cppwebservlet.h  cstlcompiler.cpp  cstlcompiler.h  cstlcompilerattributes.cpp  cstlcompilerattributes.h  cstlcompilerfor.cpp  cstlcompilerfor.h  cstlcompilerif.cpp  cstlcompilerif.h  cstlcompilerimport.cpp  cstlcompilerimport.h  cstlcompilerobject.cpp  cstlcompilerobject.h  dbstorage.h  filemanager.cpp  filemanager.h  filter.cpp  filter.h  filterchain.cpp  filterchain.h  forattributes.cpp  httpcookie.cpp  httpcookie.h  httpparser.cpp  httpparser.h  httpreadrequest.cpp  (+42 more)
CPPWebFramework/tests/: tst_configuration.cpp  tst_configuration.h  tst_cppwebapplication.cpp  tst_cppwebapplication.h  tst_cppwebcontroller.cpp  tst_cppwebcontroller.h  tst_cppwebserver.cpp  tst_cppwebserver.h  tst_cppwebservlet.cpp  tst_cppwebservlet.h  tst_cstlcompiler.cpp  tst_cstlcompiler.h  tst_cstlcompilerattributes.cpp  tst_cstlcompilerattributes.h  tst_cstlcompilerfor.cpp  tst_cstlcompilerfor.h  tst_cstlcompilerif.cpp  tst_cstlcompilerif.h  tst_cstlcompilerimport.cpp  tst_cstlcompilerimport.h  tst_cstlcompilerobject.cpp  tst_filter.cpp  (+40 more)
(+1755 files in other folders)
